--- a/src/blog-posts/Hello.mdx
+++ b/src/blog-posts/Hello.mdx
@@ -4,6 +4,8 @@ export const metadata = {
   slug: "hello-world",
 };
 
+---
+
 #### Six number signs…
 
 [MDX](https://mdxjs.com "title")
@@ -11,6 +13,7 @@ export const metadata = {
 - asterisks for unordered
 
 1. decimals and a dot for ordered items
+1. decimals and a dot for ordered
 1. decimals and a dot for ordered
 
 Two **asterisks** for strong.
@@ -22,8 +25,6 @@ The happiness of your life depends upon the quality of your thoughts: therefore,
 I had no clue how to build such dynamic meshes or make my geometries move, and my materials change colors. A few Google searches later: I got introduced to the concept of shaders that make scenes like the one above possible, and I wanted to know everything about them. However, shaders are incredibly difficult. Thus, I spent the past few weeks studying them, learned new techniques, created dozens of scenes from scratch, and hit as many roadblocks.
 
 ---
-
-![Alt text](https://ucarecdn.com/13d8f09a-6505-4367-a20b-870a889b4bfb/-/preview/450x300/)
 
 > It is not death that a man should fear, but he should fear never beginning
 > to live.
