meta tags update

--- a/src/blog-posts/SpaceTimeComplexity.mdx
+++ b/src/blog-posts/SpaceTimeComplexity.mdx
@@ -3,6 +3,8 @@ export const metadata = {
   description:
     "Week one of the Namaste DSA course I’ve learned the Space time complexity concept , here are the few point I’ve noted",
   slug: "space-time-complexity",
+  image:
+    "https://ucarecdn.com/6d54d2fb-b388-4137-9c84-a2a535cd6435/-/preview/1000x750/",
 };
 
 Week one of the [**Namaste DSA**](https://namastedev.com/learn/namaste-dsa) course I’ve learned the Space time complexity concept , here are the few point I’ve noted
