--- a/src/blog-posts/SpaceTimeComplexity.mdx
+++ b/src/blog-posts/SpaceTimeComplexity.mdx
@@ -179,3 +179,12 @@ function copyArray(arr) {
   - Cracking coding interviews and solving real-world problems
 
 > Always aim for the lowest complexity that still meets the problem’s needs.
+
+<ImageWrapper
+  src="https://ucarecdn.com/2a0c8bab-f983-49a2-8d43-7acabee20f07/-/preview/1000x107/"
+  alt="Example Image"
+/>
+<ImageWrapper
+  src="https://ucarecdn.com/10d396e1-38f5-4d81-8abd-c72e2cbb2f0a/-/preview/1000x750/"
+  alt="Example Image"
+/>
